y.output
Terminals which are not used

   K_EEPROM
   K_FLASH
   K_LOADPAGE
   K_READMEM
   K_HVCMDEXEDELAY
   TKN_ID


Grammar

    0 $accept: configuration $end

    1 configuration: /* empty */
    2              | config

    3 config: def
    4       | config def

    5 def: prog_def TKN_SEMI
    6    | part_def TKN_SEMI
    7    | K_DEFAULT_PROGRAMMER TKN_EQUAL TKN_STRING TKN_SEMI
    8    | K_DEFAULT_PARALLEL TKN_EQUAL TKN_STRING TKN_SEMI
    9    | K_DEFAULT_SERIAL TKN_EQUAL TKN_STRING TKN_SEMI
   10    | K_DEFAULT_BITCLOCK TKN_EQUAL TKN_NUMBER TKN_SEMI

   11 @1: /* empty */

   12 prog_def: K_PROGRAMMER @1 prog_parms

   13 @2: /* empty */

   14 part_def: K_PART @2 part_parms

   15 string_list: TKN_STRING
   16            | string_list TKN_COMMA TKN_STRING

   17 num_list: TKN_NUMBER
   18         | num_list TKN_COMMA TKN_NUMBER

   19 prog_parms: prog_parm TKN_SEMI
   20           | prog_parms prog_parm TKN_SEMI

   21 prog_parm: K_ID TKN_EQUAL string_list
   22          | K_TYPE TKN_EQUAL K_PAR
   23          | K_TYPE TKN_EQUAL K_SERBB
   24          | K_TYPE TKN_EQUAL K_STK500
   25          | K_TYPE TKN_EQUAL K_STK500V2
   26          | K_TYPE TKN_EQUAL K_WIRING
   27          | K_TYPE TKN_EQUAL K_STK500HVSP
   28          | K_TYPE TKN_EQUAL K_STK500PP
   29          | K_TYPE TKN_EQUAL K_STK500GENERIC
   30          | K_TYPE TKN_EQUAL K_ARDUINO
   31          | K_TYPE TKN_EQUAL K_AVRFTDI
   32          | K_TYPE TKN_EQUAL K_BUSPIRATE
   33          | K_TYPE TKN_EQUAL K_STK600
   34          | K_TYPE TKN_EQUAL K_STK600HVSP
   35          | K_TYPE TKN_EQUAL K_STK600PP
   36          | K_TYPE TKN_EQUAL K_AVR910
   37          | K_TYPE TKN_EQUAL K_USBASP
   38          | K_TYPE TKN_EQUAL K_USBTINY
   39          | K_TYPE TKN_EQUAL K_BUTTERFLY
   40          | K_TYPE TKN_EQUAL K_BUTTERFLY_MK
   41          | K_TYPE TKN_EQUAL K_JTAG_MKI
   42          | K_TYPE TKN_EQUAL K_JTAG_MKII
   43          | K_TYPE TKN_EQUAL K_JTAG_MKII_AVR32
   44          | K_TYPE TKN_EQUAL K_JTAG_MKII_DW
   45          | K_TYPE TKN_EQUAL K_JTAG_MKII_ISP
   46          | K_TYPE TKN_EQUAL K_JTAG_MKII_PDI
   47          | K_TYPE TKN_EQUAL K_DRAGON_DW
   48          | K_TYPE TKN_EQUAL K_DRAGON_HVSP
   49          | K_TYPE TKN_EQUAL K_DRAGON_ISP
   50          | K_TYPE TKN_EQUAL K_DRAGON_JTAG
   51          | K_TYPE TKN_EQUAL K_DRAGON_PDI
   52          | K_TYPE TKN_EQUAL K_DRAGON_PP
   53          | K_DESC TKN_EQUAL TKN_STRING
   54          | K_VCC TKN_EQUAL num_list
   55          | K_BUFF TKN_EQUAL num_list
   56          | K_USBDEV TKN_EQUAL TKN_STRING
   57          | K_USBVID TKN_EQUAL TKN_NUMBER
   58          | K_USBPID TKN_EQUAL TKN_NUMBER
   59          | K_USBSN TKN_EQUAL TKN_STRING
   60          | K_USBVENDOR TKN_EQUAL TKN_STRING
   61          | K_USBPRODUCT TKN_EQUAL TKN_STRING
   62          | K_BAUDRATE TKN_EQUAL TKN_NUMBER
   63          | K_RESET TKN_EQUAL TKN_NUMBER
   64          | K_SCK TKN_EQUAL TKN_NUMBER
   65          | K_MOSI TKN_EQUAL TKN_NUMBER
   66          | K_MISO TKN_EQUAL TKN_NUMBER
   67          | K_ERRLED TKN_EQUAL TKN_NUMBER
   68          | K_RDYLED TKN_EQUAL TKN_NUMBER
   69          | K_PGMLED TKN_EQUAL TKN_NUMBER
   70          | K_VFYLED TKN_EQUAL TKN_NUMBER
   71          | K_RESET TKN_EQUAL TKN_TILDE TKN_NUMBER
   72          | K_SCK TKN_EQUAL TKN_TILDE TKN_NUMBER
   73          | K_MOSI TKN_EQUAL TKN_TILDE TKN_NUMBER
   74          | K_MISO TKN_EQUAL TKN_TILDE TKN_NUMBER
   75          | K_ERRLED TKN_EQUAL TKN_TILDE TKN_NUMBER
   76          | K_RDYLED TKN_EQUAL TKN_TILDE TKN_NUMBER
   77          | K_PGMLED TKN_EQUAL TKN_TILDE TKN_NUMBER
   78          | K_VFYLED TKN_EQUAL TKN_TILDE TKN_NUMBER

   79 opcode: K_READ
   80       | K_WRITE
   81       | K_READ_LO
   82       | K_READ_HI
   83       | K_WRITE_LO
   84       | K_WRITE_HI
   85       | K_LOADPAGE_LO
   86       | K_LOADPAGE_HI
   87       | K_LOAD_EXT_ADDR
   88       | K_WRITEPAGE
   89       | K_CHIP_ERASE
   90       | K_PGM_ENABLE

   91 part_parms: part_parm TKN_SEMI
   92           | part_parms part_parm TKN_SEMI

   93 reset_disposition: K_DEDICATED
   94                  | K_IO

   95 parallel_modes: yesno
   96               | K_PSEUDO

   97 retry_lines: K_RESET
   98            | K_SCK

   99 part_parm: K_ID TKN_EQUAL TKN_STRING
  100          | K_DESC TKN_EQUAL TKN_STRING
  101          | K_DEVICECODE TKN_EQUAL TKN_NUMBER
  102          | K_STK500_DEVCODE TKN_EQUAL TKN_NUMBER
  103          | K_AVR910_DEVCODE TKN_EQUAL TKN_NUMBER
  104          | K_SIGNATURE TKN_EQUAL TKN_NUMBER TKN_NUMBER TKN_NUMBER
  105          | K_PP_CONTROLSTACK TKN_EQUAL num_list
  106          | K_HVSP_CONTROLSTACK TKN_EQUAL num_list
  107          | K_FLASH_INSTR TKN_EQUAL num_list
  108          | K_EEPROM_INSTR TKN_EQUAL num_list
  109          | K_CHIP_ERASE_DELAY TKN_EQUAL TKN_NUMBER
  110          | K_PAGEL TKN_EQUAL TKN_NUMBER
  111          | K_BS2 TKN_EQUAL TKN_NUMBER
  112          | K_RESET TKN_EQUAL reset_disposition
  113          | K_TIMEOUT TKN_EQUAL TKN_NUMBER
  114          | K_STABDELAY TKN_EQUAL TKN_NUMBER
  115          | K_CMDEXEDELAY TKN_EQUAL TKN_NUMBER
  116          | K_HVSPCMDEXEDELAY TKN_EQUAL TKN_NUMBER
  117          | K_SYNCHLOOPS TKN_EQUAL TKN_NUMBER
  118          | K_BYTEDELAY TKN_EQUAL TKN_NUMBER
  119          | K_POLLVALUE TKN_EQUAL TKN_NUMBER
  120          | K_POLLINDEX TKN_EQUAL TKN_NUMBER
  121          | K_PREDELAY TKN_EQUAL TKN_NUMBER
  122          | K_POSTDELAY TKN_EQUAL TKN_NUMBER
  123          | K_POLLMETHOD TKN_EQUAL TKN_NUMBER
  124          | K_HVENTERSTABDELAY TKN_EQUAL TKN_NUMBER
  125          | K_PROGMODEDELAY TKN_EQUAL TKN_NUMBER
  126          | K_LATCHCYCLES TKN_EQUAL TKN_NUMBER
  127          | K_TOGGLEVTG TKN_EQUAL TKN_NUMBER
  128          | K_POWEROFFDELAY TKN_EQUAL TKN_NUMBER
  129          | K_RESETDELAYMS TKN_EQUAL TKN_NUMBER
  130          | K_RESETDELAYUS TKN_EQUAL TKN_NUMBER
  131          | K_HVLEAVESTABDELAY TKN_EQUAL TKN_NUMBER
  132          | K_RESETDELAY TKN_EQUAL TKN_NUMBER
  133          | K_CHIPERASEPULSEWIDTH TKN_EQUAL TKN_NUMBER
  134          | K_CHIPERASEPOLLTIMEOUT TKN_EQUAL TKN_NUMBER
  135          | K_CHIPERASETIME TKN_EQUAL TKN_NUMBER
  136          | K_PROGRAMFUSEPULSEWIDTH TKN_EQUAL TKN_NUMBER
  137          | K_PROGRAMFUSEPOLLTIMEOUT TKN_EQUAL TKN_NUMBER
  138          | K_PROGRAMLOCKPULSEWIDTH TKN_EQUAL TKN_NUMBER
  139          | K_PROGRAMLOCKPOLLTIMEOUT TKN_EQUAL TKN_NUMBER
  140          | K_SYNCHCYCLES TKN_EQUAL TKN_NUMBER
  141          | K_HAS_JTAG TKN_EQUAL yesno
  142          | K_HAS_DW TKN_EQUAL yesno
  143          | K_HAS_PDI TKN_EQUAL yesno
  144          | K_HAS_TPI TKN_EQUAL yesno
  145          | K_IS_AVR32 TKN_EQUAL yesno
  146          | K_ALLOWFULLPAGEBITSTREAM TKN_EQUAL yesno
  147          | K_ENABLEPAGEPROGRAMMING TKN_EQUAL yesno
  148          | K_IDR TKN_EQUAL TKN_NUMBER
  149          | K_RAMPZ TKN_EQUAL TKN_NUMBER
  150          | K_SPMCR TKN_EQUAL TKN_NUMBER
  151          | K_EECR TKN_EQUAL TKN_NUMBER
  152          | K_NVM_BASE TKN_EQUAL TKN_NUMBER
  153          | K_SERIAL TKN_EQUAL yesno
  154          | K_PARALLEL TKN_EQUAL parallel_modes
  155          | K_RETRY_PULSE TKN_EQUAL retry_lines

  156 @3: /* empty */

  157 part_parm: K_MEMORY TKN_STRING @3 mem_specs
  158          | opcode TKN_EQUAL string_list

  159 yesno: K_YES
  160      | K_NO

  161 mem_specs: mem_spec TKN_SEMI
  162          | mem_specs mem_spec TKN_SEMI

  163 mem_spec: K_PAGED TKN_EQUAL yesno
  164         | K_SIZE TKN_EQUAL TKN_NUMBER
  165         | K_PAGE_SIZE TKN_EQUAL TKN_NUMBER
  166         | K_NUM_PAGES TKN_EQUAL TKN_NUMBER
  167         | K_OFFSET TKN_EQUAL TKN_NUMBER
  168         | K_MIN_WRITE_DELAY TKN_EQUAL TKN_NUMBER
  169         | K_MAX_WRITE_DELAY TKN_EQUAL TKN_NUMBER
  170         | K_PWROFF_AFTER_WRITE TKN_EQUAL yesno
  171         | K_READBACK_P1 TKN_EQUAL TKN_NUMBER
  172         | K_READBACK_P2 TKN_EQUAL TKN_NUMBER
  173         | K_MODE TKN_EQUAL TKN_NUMBER
  174         | K_DELAY TKN_EQUAL TKN_NUMBER
  175         | K_BLOCKSIZE TKN_EQUAL TKN_NUMBER
  176         | K_READSIZE TKN_EQUAL TKN_NUMBER
  177         | K_POLLINDEX TKN_EQUAL TKN_NUMBER
  178         | opcode TKN_EQUAL string_list


Terminals, with rules where they appear

$end (0) 0
error (256)
K_READ (258) 79
K_WRITE (259) 80
K_READ_LO (260) 81
K_READ_HI (261) 82
K_WRITE_LO (262) 83
K_WRITE_HI (263) 84
K_LOADPAGE_LO (264) 85
K_LOADPAGE_HI (265) 86
K_LOAD_EXT_ADDR (266) 87
K_WRITEPAGE (267) 88
K_CHIP_ERASE (268) 89
K_PGM_ENABLE (269) 90
K_MEMORY (270) 157
K_PAGE_SIZE (271) 165
K_PAGED (272) 163
K_ARDUINO (273) 30
K_AVRFTDI (274) 31
K_BAUDRATE (275) 62
K_BS2 (276) 111
K_BUFF (277) 55
K_BUSPIRATE (278) 32
K_CHIP_ERASE_DELAY (279) 109
K_DEDICATED (280) 93
K_DEFAULT_PARALLEL (281) 8
K_DEFAULT_PROGRAMMER (282) 7
K_DEFAULT_SERIAL (283) 9
K_DEFAULT_BITCLOCK (284) 10
K_DESC (285) 53 100
K_DEVICECODE (286) 101
K_DRAGON_DW (287) 47
K_DRAGON_HVSP (288) 48
K_DRAGON_ISP (289) 49
K_DRAGON_JTAG (290) 50
K_DRAGON_PDI (291) 51
K_DRAGON_PP (292) 52
K_STK500_DEVCODE (293) 102
K_AVR910_DEVCODE (294) 103
K_EEPROM (295)
K_ERRLED (296) 67 75
K_FLASH (297)
K_ID (298) 21 99
K_IO (299) 94
K_JTAG_MKI (300) 41
K_JTAG_MKII (301) 42
K_JTAG_MKII_AVR32 (302) 43
K_JTAG_MKII_DW (303) 44
K_JTAG_MKII_ISP (304) 45
K_JTAG_MKII_PDI (305) 46
K_LOADPAGE (306)
K_MAX_WRITE_DELAY (307) 169
K_MIN_WRITE_DELAY (308) 168
K_MISO (309) 66 74
K_MOSI (310) 65 73
K_NUM_PAGES (311) 166
K_NVM_BASE (312) 152
K_OFFSET (313) 167
K_PAGEL (314) 110
K_PAR (315) 22
K_PARALLEL (316) 154
K_PART (317) 14
K_PGMLED (318) 69 77
K_PROGRAMMER (319) 12
K_PSEUDO (320) 96
K_PWROFF_AFTER_WRITE (321) 170
K_RDYLED (322) 68 76
K_READBACK_P1 (323) 171
K_READBACK_P2 (324) 172
K_READMEM (325)
K_RESET (326) 63 71 97 112
K_RETRY_PULSE (327) 155
K_SERBB (328) 23
K_SERIAL (329) 153
K_SCK (330) 64 72 98
K_SIGNATURE (331) 104
K_SIZE (332) 164
K_STK500 (333) 24
K_STK500HVSP (334) 27
K_STK500PP (335) 28
K_STK500V2 (336) 25
K_STK500GENERIC (337) 29
K_STK600 (338) 33
K_STK600HVSP (339) 34
K_STK600PP (340) 35
K_AVR910 (341) 36
K_USBASP (342) 37
K_USBDEV (343) 56
K_USBSN (344) 59
K_USBTINY (345) 38
K_USBPID (346) 58
K_USBPRODUCT (347) 61
K_USBVENDOR (348) 60
K_USBVID (349) 57
K_BUTTERFLY (350) 39
K_BUTTERFLY_MK (351) 40
K_TYPE (352) 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    40 41 42 43 44 45 46 47 48 49 50 51 52
K_VCC (353) 54
K_VFYLED (354) 70 78
K_WIRING (355) 26
K_NO (356) 160
K_YES (357) 159
K_TIMEOUT (358) 113
K_STABDELAY (359) 114
K_CMDEXEDELAY (360) 115
K_HVSPCMDEXEDELAY (361) 116
K_SYNCHLOOPS (362) 117
K_BYTEDELAY (363) 118
K_POLLVALUE (364) 119
K_POLLINDEX (365) 120 177
K_PREDELAY (366) 121
K_POSTDELAY (367) 122
K_POLLMETHOD (368) 123
K_MODE (369) 173
K_DELAY (370) 174
K_BLOCKSIZE (371) 175
K_READSIZE (372) 176
K_HVENTERSTABDELAY (373) 124
K_PROGMODEDELAY (374) 125
K_LATCHCYCLES (375) 126
K_TOGGLEVTG (376) 127
K_POWEROFFDELAY (377) 128
K_RESETDELAYMS (378) 129
K_RESETDELAYUS (379) 130
K_HVLEAVESTABDELAY (380) 131
K_RESETDELAY (381) 132
K_SYNCHCYCLES (382) 140
K_HVCMDEXEDELAY (383)
K_CHIPERASEPULSEWIDTH (384) 133
K_CHIPERASEPOLLTIMEOUT (385) 134
K_CHIPERASETIME (386) 135
K_PROGRAMFUSEPULSEWIDTH (387) 136
K_PROGRAMFUSEPOLLTIMEOUT (388) 137
K_PROGRAMLOCKPULSEWIDTH (389) 138
K_PROGRAMLOCKPOLLTIMEOUT (390) 139
K_PP_CONTROLSTACK (391) 105
K_HVSP_CONTROLSTACK (392) 106
K_ALLOWFULLPAGEBITSTREAM (393) 146
K_ENABLEPAGEPROGRAMMING (394) 147
K_HAS_JTAG (395) 141
K_HAS_DW (396) 142
K_HAS_PDI (397) 143
K_HAS_TPI (398) 144
K_IDR (399) 148
K_IS_AVR32 (400) 145
K_RAMPZ (401) 149
K_SPMCR (402) 150
K_EECR (403) 151
K_FLASH_INSTR (404) 107
K_EEPROM_INSTR (405) 108
TKN_COMMA (406) 16 18
TKN_EQUAL (407) 7 8 9 10 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
    114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129
    130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145
    146 147 148 149 150 151 152 153 154 155 158 163 164 165 166 167
    168 169 170 171 172 173 174 175 176 177 178
TKN_SEMI (408) 5 6 7 8 9 10 19 20 91 92 161 162
TKN_TILDE (409) 71 72 73 74 75 76 77 78
TKN_NUMBER (410) 10 17 18 57 58 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 101 102 103 104 109 110 111 113 114 115 116 117
    118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133
    134 135 136 137 138 139 140 148 149 150 151 152 164 165 166 167
    168 169 171 172 173 174 175 176 177
TKN_STRING (411) 7 8 9 15 16 53 56 59 60 61 99 100 157
TKN_ID (412)


Nonterminals, with rules where they appear

$accept (158)
    on left: 0
configuration (159)
    on left: 1 2, on right: 0
config (160)
    on left: 3 4, on right: 2 4
def (161)
    on left: 5 6 7 8 9 10, on right: 3 4
prog_def (162)
    on left: 12, on right: 5
@1 (163)
    on left: 11, on right: 12
part_def (164)
    on left: 14, on right: 6
@2 (165)
    on left: 13, on right: 14
string_list (166)
    on left: 15 16, on right: 16 21 158 178
num_list (167)
    on left: 17 18, on right: 18 54 55 105 106 107 108
prog_parms (168)
    on left: 19 20, on right: 12 20
prog_parm (169)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
    39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78,
    on right: 19 20
opcode (170)
    on left: 79 80 81 82 83 84 85 86 87 88 89 90, on right: 158 178
part_parms (171)
    on left: 91 92, on right: 14 92
reset_disposition (172)
    on left: 93 94, on right: 112
parallel_modes (173)
    on left: 95 96, on right: 154
retry_lines (174)
    on left: 97 98, on right: 155
part_parm (175)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111 112
    113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128
    129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144
    145 146 147 148 149 150 151 152 153 154 155 157 158,
    on right: 91 92
@3 (176)
    on left: 156, on right: 157
yesno (177)
    on left: 159 160, on right: 95 141 142 143 144 145 146 147 153
    163 170
mem_specs (178)
    on left: 161 162, on right: 157 162
mem_spec (179)
    on left: 163 164 165 166 167 168 169 170 171 172 173 174 175 176
    177 178, on right: 161 162


state 0

    0 $accept: . configuration $end

    K_DEFAULT_PARALLEL    shift, and go to state 1
    K_DEFAULT_PROGRAMMER  shift, and go to state 2
    K_DEFAULT_SERIAL      shift, and go to state 3
    K_DEFAULT_BITCLOCK    shift, and go to state 4
    K_PART                shift, and go to state 5
    K_PROGRAMMER          shift, and go to state 6

    $default  reduce using rule 1 (configuration)

    configuration  go to state 7
    config         go to state 8
    def            go to state 9
    prog_def       go to state 10
    part_def       go to state 11


state 1

    8 def: K_DEFAULT_PARALLEL . TKN_EQUAL TKN_STRING TKN_SEMI

    TKN_EQUAL  shift, and go to state 12


state 2

    7 def: K_DEFAULT_PROGRAMMER . TKN_EQUAL TKN_STRING TKN_SEMI

    TKN_EQUAL  shift, and go to state 13


state 3

    9 def: K_DEFAULT_SERIAL . TKN_EQUAL TKN_STRING TKN_SEMI

    TKN_EQUAL  shift, and go to state 14


state 4

   10 def: K_DEFAULT_BITCLOCK . TKN_EQUAL TKN_NUMBER TKN_SEMI

    TKN_EQUAL  shift, and go to state 15


state 5

   14 part_def: K_PART . @2 part_parms

    $default  reduce using rule 13 (@2)

    @2  go to state 16


state 6

   12 prog_def: K_PROGRAMMER . @1 prog_parms

    $default  reduce using rule 11 (@1)

    @1  go to state 17


state 7

    0 $accept: configuration . $end

    $end  shift, and go to state 18


state 8

    2 configuration: config .
    4 config: config . def

    K_DEFAULT_PARALLEL    shift, and go to state 1
    K_DEFAULT_PROGRAMMER  shift, and go to state 2
    K_DEFAULT_SERIAL      shift, and go to state 3
    K_DEFAULT_BITCLOCK    shift, and go to state 4
    K_PART                shift, and go to state 5
    K_PROGRAMMER          shift, and go to state 6

    $default  reduce using rule 2 (configuration)

    def       go to state 19
    prog_def  go to state 10
    part_def  go to state 11


state 9

    3 config: def .

    $default  reduce using rule 3 (config)


state 10

    5 def: prog_def . TKN_SEMI

    TKN_SEMI  shift, and go to state 20


state 11

    6 def: part_def . TKN_SEMI

    TKN_SEMI  shift, and go to state 21


state 12

    8 def: K_DEFAULT_PARALLEL TKN_EQUAL . TKN_STRING TKN_SEMI

    TKN_STRING  shift, and go to state 22


state 13

    7 def: K_DEFAULT_PROGRAMMER TKN_EQUAL . TKN_STRING TKN_SEMI

    TKN_STRING  shift, and go to state 23


state 14

    9 def: K_DEFAULT_SERIAL TKN_EQUAL . TKN_STRING TKN_SEMI

    TKN_STRING  shift, and go to state 24


state 15

   10 def: K_DEFAULT_BITCLOCK TKN_EQUAL . TKN_NUMBER TKN_SEMI

    TKN_NUMBER  shift, and go to state 25


state 16

   14 part_def: K_PART @2 . part_parms

    K_READ                    shift, and go to state 26
    K_WRITE                   shift, and go to state 27
    K_READ_LO                 shift, and go to state 28
    K_READ_HI                 shift, and go to state 29
    K_WRITE_LO                shift, and go to state 30
    K_WRITE_HI                shift, and go to state 31
    K_LOADPAGE_LO             shift, and go to state 32
    K_LOADPAGE_HI             shift, and go to state 33
    K_LOAD_EXT_ADDR           shift, and go to state 34
    K_WRITEPAGE               shift, and go to state 35
    K_CHIP_ERASE              shift, and go to state 36
    K_PGM_ENABLE              shift, and go to state 37
    K_MEMORY                  shift, and go to state 38
    K_BS2                     shift, and go to state 39
    K_CHIP_ERASE_DELAY        shift, and go to state 40
    K_DESC                    shift, and go to state 41
    K_DEVICECODE              shift, and go to state 42
    K_STK500_DEVCODE          shift, and go to state 43
    K_AVR910_DEVCODE          shift, and go to state 44
    K_ID                      shift, and go to state 45
    K_NVM_BASE                shift, and go to state 46
    K_PAGEL                   shift, and go to state 47
    K_PARALLEL                shift, and go to state 48
    K_RESET                   shift, and go to state 49
    K_RETRY_PULSE             shift, and go to state 50
    K_SERIAL                  shift, and go to state 51
    K_SIGNATURE               shift, and go to state 52
    K_TIMEOUT                 shift, and go to state 53
    K_STABDELAY               shift, and go to state 54
    K_CMDEXEDELAY             shift, and go to state 55
    K_HVSPCMDEXEDELAY         shift, and go to state 56
    K_SYNCHLOOPS              shift, and go to state 57
    K_BYTEDELAY               shift, and go to state 58
    K_POLLVALUE               shift, and go to state 59
    K_POLLINDEX               shift, and go to state 60
    K_PREDELAY                shift, and go to state 61
    K_POSTDELAY               shift, and go to state 62
    K_POLLMETHOD              shift, and go to state 63
    K_HVENTERSTABDELAY        shift, and go to state 64
    K_PROGMODEDELAY           shift, and go to state 65
    K_LATCHCYCLES             shift, and go to state 66
    K_TOGGLEVTG               shift, and go to state 67
    K_POWEROFFDELAY           shift, and go to state 68
    K_RESETDELAYMS            shift, and go to state 69
    K_RESETDELAYUS            shift, and go to state 70
    K_HVLEAVESTABDELAY        shift, and go to state 71
    K_RESETDELAY              shift, and go to state 72
    K_SYNCHCYCLES             shift, and go to state 73
    K_CHIPERASEPULSEWIDTH     shift, and go to state 74
    K_CHIPERASEPOLLTIMEOUT    shift, and go to state 75
    K_CHIPERASETIME           shift, and go to state 76
    K_PROGRAMFUSEPULSEWIDTH   shift, and go to state 77
    K_PROGRAMFUSEPOLLTIMEOUT  shift, and go to state 78
    K_PROGRAMLOCKPULSEWIDTH   shift, and go to state 79
    K_PROGRAMLOCKPOLLTIMEOUT  shift, and go to state 80
    K_PP_CONTROLSTACK         shift, and go to state 81
    K_HVSP_CONTROLSTACK       shift, and go to state 82
    K_ALLOWFULLPAGEBITSTREAM  shift, and go to state 83
    K_ENABLEPAGEPROGRAMMING   shift, and go to state 84
    K_HAS_JTAG                shift, and go to state 85
    K_HAS_DW                  shift, and go to state 86
    K_HAS_PDI                 shift, and go to state 87
    K_HAS_TPI                 shift, and go to state 88
    K_IDR                     shift, and go to state 89
    K_IS_AVR32                shift, and go to state 90
    K_RAMPZ                   shift, and go to state 91
    K_SPMCR                   shift, and go to state 92
    K_EECR                    shift, and go to state 93
    K_FLASH_INSTR             shift, and go to state 94
    K_EEPROM_INSTR            shift, and go to state 95

    opcode      go to state 96
    part_parms  go to state 97
    part_parm   go to state 98


state 17

   12 prog_def: K_PROGRAMMER @1 . prog_parms

    K_BAUDRATE    shift, and go to state 99
    K_BUFF        shift, and go to state 100
    K_DESC        shift, and go to state 101
    K_ERRLED      shift, and go to state 102
    K_ID          shift, and go to state 103
    K_MISO        shift, and go to state 104
    K_MOSI        shift, and go to state 105
    K_PGMLED      shift, and go to state 106
    K_RDYLED      shift, and go to state 107
    K_RESET       shift, and go to state 108
    K_SCK         shift, and go to state 109
    K_USBDEV      shift, and go to state 110
    K_USBSN       shift, and go to state 111
    K_USBPID      shift, and go to state 112
    K_USBPRODUCT  shift, and go to state 113
    K_USBVENDOR   shift, and go to state 114
    K_USBVID      shift, and go to state 115
    K_TYPE        shift, and go to state 116
    K_VCC         shift, and go to state 117
    K_VFYLED      shift, and go to state 118

    prog_parms  go to state 119
    prog_parm   go to state 120


state 18

    0 $accept: configuration $end .

    $default  accept


state 19

    4 config: config def .

    $default  reduce using rule 4 (config)


state 20

    5 def: prog_def TKN_SEMI .

    $default  reduce using rule 5 (def)


state 21

    6 def: part_def TKN_SEMI .

    $default  reduce using rule 6 (def)


state 22

    8 def: K_DEFAULT_PARALLEL TKN_EQUAL TKN_STRING . TKN_SEMI

    TKN_SEMI  shift, and go to state 121


state 23

    7 def: K_DEFAULT_PROGRAMMER TKN_EQUAL TKN_STRING . TKN_SEMI

    TKN_SEMI  shift, and go to state 122


state 24

    9 def: K_DEFAULT_SERIAL TKN_EQUAL TKN_STRING . TKN_SEMI

    TKN_SEMI  shift, and go to state 123


state 25

   10 def: K_DEFAULT_BITCLOCK TKN_EQUAL TKN_NUMBER . TKN_SEMI

    TKN_SEMI  shift, and go to state 124


state 26

   79 opcode: K_READ .

    $default  reduce using rule 79 (opcode)


state 27

   80 opcode: K_WRITE .

    $default  reduce using rule 80 (opcode)


state 28

   81 opcode: K_READ_LO .

    $default  reduce using rule 81 (opcode)


state 29

   82 opcode: K_READ_HI .

    $default  reduce using rule 82 (opcode)


state 30

   83 opcode: K_WRITE_LO .

    $default  reduce using rule 83 (opcode)


state 31

   84 opcode: K_WRITE_HI .

    $default  reduce using rule 84 (opcode)


state 32

   85 opcode: K_LOADPAGE_LO .

    $default  reduce using rule 85 (opcode)


state 33

   86 opcode: K_LOADPAGE_HI .

    $default  reduce using rule 86 (opcode)


state 34

   87 opcode: K_LOAD_EXT_ADDR .

    $default  reduce using rule 87 (opcode)


state 35

   88 opcode: K_WRITEPAGE .

    $default  reduce using rule 88 (opcode)


state 36

   89 opcode: K_CHIP_ERASE .

    $default  reduce using rule 89 (opcode)


state 37

   90 opcode: K_PGM_ENABLE .

    $default  reduce using rule 90 (opcode)


state 38

  157 part_parm: K_MEMORY . TKN_STRING @3 mem_specs

    TKN_STRING  shift, and go to state 125


state 39

  111 part_parm: K_BS2 . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 126


state 40

  109 part_parm: K_CHIP_ERASE_DELAY . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 127


state 41

  100 part_parm: K_DESC . TKN_EQUAL TKN_STRING

    TKN_EQUAL  shift, and go to state 128


state 42

  101 part_parm: K_DEVICECODE . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 129


state 43

  102 part_parm: K_STK500_DEVCODE . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 130


state 44

  103 part_parm: K_AVR910_DEVCODE . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 131


state 45

   99 part_parm: K_ID . TKN_EQUAL TKN_STRING

    TKN_EQUAL  shift, and go to state 132


state 46

  152 part_parm: K_NVM_BASE . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 133


state 47

  110 part_parm: K_PAGEL . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 134


state 48

  154 part_parm: K_PARALLEL . TKN_EQUAL parallel_modes

    TKN_EQUAL  shift, and go to state 135


state 49

  112 part_parm: K_RESET . TKN_EQUAL reset_disposition

    TKN_EQUAL  shift, and go to state 136


state 50

  155 part_parm: K_RETRY_PULSE . TKN_EQUAL retry_lines

    TKN_EQUAL  shift, and go to state 137


state 51

  153 part_parm: K_SERIAL . TKN_EQUAL yesno

    TKN_EQUAL  shift, and go to state 138


state 52

  104 part_parm: K_SIGNATURE . TKN_EQUAL TKN_NUMBER TKN_NUMBER TKN_NUMBER

    TKN_EQUAL  shift, and go to state 139


state 53

  113 part_parm: K_TIMEOUT . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 140


state 54

  114 part_parm: K_STABDELAY . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 141


state 55

  115 part_parm: K_CMDEXEDELAY . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 142


state 56

  116 part_parm: K_HVSPCMDEXEDELAY . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 143


state 57

  117 part_parm: K_SYNCHLOOPS . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 144


state 58

  118 part_parm: K_BYTEDELAY . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 145


state 59

  119 part_parm: K_POLLVALUE . TKN_EQUAL TKN_NUMBER

    TKN_EQUAL  shift, and go to state 146


state 60
